// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-multi-select 500px width 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="500px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 500px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 500px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-multi-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                CSS Colors
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select Full width 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  multiselect="true"
  role="combobox"
  style="width: 100%;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-multi-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                CSS Colors
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select Large width 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="896px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 896px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-multi-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                CSS Colors
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select complete 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="896px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-label m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 896px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-multi-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                CSS Colors
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select custom chip info 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-value m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                        0 - Simba 
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                 
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select custom select-item 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-value m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Simba
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                 
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select default 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-value m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                 
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select empty 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select error-message 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-error m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message m--has-validation-message"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        Error message
      </span>
    </p>
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select label 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-multi-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                La famille Von Trapp
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                 
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select object as options 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="m-base-select"
    input-max-width="288px"
    multiselect="true"
    role="combobox"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
    >
      <div
        class="m-input-style m-multi-select m--has-cursor-pointer m--has-label m--is-tag-default"
        style="width: 100%; margin-top: 10px; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Facultés
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div
                  aria-describedby="undefined undefined"
                  aria-haspopup="listbox"
                  aria-hidden="true"
                  class="m-multi-select__chips"
                  role="button"
                  tabindex="0"
                >
                  <input
                    readonly="readonly"
                    tabindex="-1"
                    type="text"
                  />
                    
                  <div
                    aria-hidden="true"
                    class="m-multi-select__visually-hidden"
                  >
                    
                    
                
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow-icon"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
  </div>
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  Value: []
</div>
`;

exports[`Storyshots modul-components|m-multi-select options undefined 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select placeholder 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  placeholder="A very very very very very very looooong"
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select select all link 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--has-value m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <div
                  class="m-chip-delete m-multi-select__chip m--is-small"
                >
                  <div
                    class="m-chip-delete__body"
                  >
                    <span
                      class="m-chip-delete__text"
                      id="mChipDeleteText-fakeId"
                    >
                      <span
                        class="m-chip-delete__hidden-text"
                      >
                        Supprimer : 
                      </span>
                       
                            Maria Rainer
                        
                    </span>
                     
                    <button
                      aria-labelledby="mChipDeleteText-fakeId"
                      class="m-chip-delete__button"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-chip-delete__icon"
                        height="8px"
                        width="8px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                 
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select/mobile iphone6 - select all link 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-multi-select/mobile iphone6 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="m-base-select"
  input-max-width="288px"
  multiselect="true"
  role="combobox"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-base-select__popup"
  >
    <div
      class="m-input-style m-multi-select m--has-cursor-pointer m--is-tag-default"
      style="width: 100%; margin-top: 10px; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div
                aria-describedby="undefined undefined"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="m-multi-select__chips"
                role="button"
                tabindex="0"
              >
                <input
                  readonly="readonly"
                  tabindex="-1"
                  type="text"
                />
                  
                <div
                  aria-hidden="true"
                  class="m-multi-select__visually-hidden"
                >
                  
                    
                
                </div>
              </div>
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-multi-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-multi-select__arrow-icon"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-multi-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popper m-popup"
  >
     
    <!---->
  </div>
</div>
`;
